# DynamixelAX-12A

./: CMakeLists.txt  README.md  package.xml
include/actuator_controller/: JointState.h  actuator_control.h
launch/: actuator_control.launch
src/: actuator_control.bak.cpp  actuator_control.cpp
